# legal-doc-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
mcp-servers/pdf-compliance-analyzer/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  server.py
src/: server.py
